Removed orphans
orphaned cover art objects are now removed from database